fix(core): ensure ImportResponse ctor properly accepts null args